Enhance date and time selection UI with responsive design and animations; center titles and improve hover effects

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                     <div class="card-body p-4">
                         <!-- Date Selection -->
                         <div class="mb-4">
-                            <h5 class="mb-3 section-title"><i class="bi bi-calendar3 me-2"></i>Date</h5>
-                            <div class="row g-2 date-selection-row">
+                            <h5 class="mb-3 section-title text-center"><i class="bi bi-calendar3 me-2"></i>Date</h5>
+                            <div class="row g-2 date-selection-row justify-content-center">
                                 <div class="col-auto">
                                     <div class="date-card active" data-date="2025-06-02">
                                         <div class="date-header">Jun <strong>02</strong></div>
@@ -77,8 +77,8 @@
 
                         <!-- Time Selection -->
                         <div class="mb-4">
-                            <h5 class="mb-3 section-title"><i class="bi bi-clock me-2"></i>Time</h5>
-                            <div class="row g-2 time-selection-row">
+                            <h5 class="mb-3 section-title text-center"><i class="bi bi-clock me-2"></i>Time</h5>
+                            <div class="row g-2 time-selection-row justify-content-center">
                                 <div class="col-auto">
                                     <button type="button" class="btn time-btn active" data-time="07:30">7.30 AM</button>
                                 </div>
