--- a/confirmation.html
+++ b/confirmation.html
@@ -15,7 +15,7 @@
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
         <div class="container-fluid justify-content-center">
-            <a class="navbar-brand fw-bold" href="index.html">Logo</a>
+            <a class="navbar-brand fw-bold" href="index.html">MovieTicker</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
