feat: Update booking process to complete booking instead of redirecting to payment; enhance button text and save booking data

--- a/booking.html
+++ b/booking.html
@@ -376,15 +376,15 @@
                             </div>
                         </div>
 
-                        <!-- Continue to Payment -->
+                        <!-- Complete Booking -->
                         <div class="payment-options-modern">
                             <div class="d-grid gap-2">
                                 <button id="continue-payment-btn" class="btn btn-primary btn-lg" disabled>
-                                    <i class="bi bi-credit-card me-2"></i>Continue to Payment
+                                    <i class="bi bi-check-circle me-2"></i>Complete Booking
                                 </button>
                                 <p class="text-muted small text-center mt-2 mb-0">
                                     <i class="bi bi-shield-check me-1"></i>
-                                    Secure payment powered by industry-standard encryption
+                                    Secure booking process with instant confirmation
                                 </p>
                             </div>
                         </div>
