--- a/payment.html
+++ b/payment.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="payment.css">
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -362,7 +363,7 @@
                         </div>
 
                         <!-- Pay Now Button -->
-                        <button type="submit" form="payment-form" class="btn btn-primary btn-lg w-100 mt-4 pay-now-btn">
+                        <button type="submit" form="payment-form" id="pay-now-btn" class="btn btn-primary btn-lg w-100 mt-4 pay-now-btn">
                             <i class="bi bi-credit-card me-2"></i>
                             Pay LKR 2,262.40
                         </button>
@@ -450,6 +451,7 @@
 
     <!-- Bootstrap 5 JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="script.js"></script>
     <script src="payment.js"></script>
 </body>
 </html>
